--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,18 @@
 html,body{
   height: 100%;
   width: 100%;
-  background: #111;
+  /* background: #111; */
 }
 #page1-in{
-  perspective: 1000px;
+  perspective: 1500px;
+}
+#section2{
+  overflow: hidden;
+  position: relative;
+  perspective: 3000px;
+}
+.rotateText{
+  transform-origin: 100% 70%;
 }
 #tiltDiv{
   /* background-color: red; */
